# ttypal-ai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/ttypal/: SKILL.md
.qwen/skills/standardize-ai-workflow/: SKILL.md
docs/: architecture.md  linux.md  macos.md  manual-test-cases.md  test-cases.md  windows-wsl.md  zmodem-bench.md
skills/ttypal/: SKILL.md
tests/: record_fixtures.py  test_ai_e2e.py  test_cli_e2e.py  test_cli_headless.py  test_config.py  test_integration.py  test_logger.py  test_macro.py  test_recorder.py  test_regression.py  test_replay.py  test_serial_conn.py  test_session.py  test_tail.py
tests/fixtures/: basic_commands.rec  empty_input.rec  file_ops.rec
ttypal/: cli_headless.py  cli_send.py  cli_tail.py  cli_xfer.py  config.py  logger.py  macro.py  main.py  recorder.py  replay_backend.py  serial_conn.py  session.py  socket_server.py  terminal.py  xmodem_transfer.py  zmodem_transfer.py
