[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ttypal-ai"
version = "0.1.0"
description = "Serial port debug tool for humans and AI agents"
requires-python = ">=3.9"
license = {text = "MIT"}
readme = "README.md"
keywords = ["serial", "uart", "debug", "embedded", "AI", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "pyserial>=3.5",
    "tomli-w>=1.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
ttypal = "ttypal.main:main"
ttypal-send = "ttypal.cli_send:main"
ttypal-tail = "ttypal.cli_tail:main"
ttypal-daemon = "ttypal.cli_headless:main"

[tool.setuptools.packages.find]
include = ["ttypal*"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
